packages/components/src/components/bal-card/bal-card.sass
@import '@baloise/design-system-css/sass/mixins'

=card-spacing($spacing: 1rem)
  & > :not(bal-badge):not(bal-tag):first-child
    padding-top: $spacing
  & > :not(bal-badge):not(bal-tag):last-child
    padding-bottom: $spacing
  & > bal-badge + bal-card-title,
  & > bal-badge + bal-card-content,
  & > bal-tag + bal-card-title,
  & > bal-tag + bal-card-content,
  & > bal-card-title + bal-card-content,
  & > bal-card-subtitle + bal-card-content,
  & > bal-card-actions,
  & > bal-card-button
    padding-top: $spacing
  & > bal-accordion
    padding-bottom: 0 !important
  & bal-card-title,
  & bal-card-subtitle,
  & bal-card-content,
  & bal-card-actions,
  & bal-card-button
    padding-left: $spacing
    padding-right: $spacing

+block(card)
  position: relative
  display: block
  background: transparent
  box-shadow: var(--bal-shadow-normal)
  border-radius: var(--bal-radius-large)
  //
  // Colors
  +modifier(is-white)
    background: var(--bal-color-white)
  +modifier(is-blue)
    background: var(--bal-color-primary)
  +modifier(is-primary)
    background: var(--bal-color-primary)
  +modifier(is-info)
    background: var(--bal-color-primary)
  +modifier(is-success)
    background: var(--bal-color-success)
  +modifier(is-warning)
    background: var(--bal-color-warning)
  +modifier(is-danger)
    background: var(--bal-color-danger)
  +modifier(is-grey)
    background: var(--bal-color-grey)
  +modifier(is-red)
    background: var(--bal-color-red)
  +modifier(is-yellow)
    background: var(--bal-color-yellow)
  +modifier(is-purple)
    background: var(--bal-color-purple)
  +modifier(is-green)
    background: var(--bal-color-green)
  +modifier(is-red-light)
    background: var(--bal-color-red-1)
  +modifier(is-yellow-light)
    background: var(--bal-color-yellow-1)
  +modifier(is-purple-light)
    background: var(--bal-color-purple-1)
  +modifier(is-green-light)
    background: var(--bal-color-green-1)
  +modifier(is-grey-light)
    background: var(--bal-color-grey-1)
  +modifier(is-purple-1)
    background: var(--bal-color-purple-1)
  +modifier(is-purple-2)
    background: var(--bal-color-purple-2)
  +modifier(is-purple-3)
    background: var(--bal-color-purple)
  +modifier(is-green-1)
    background: var(--bal-color-green-1)
  +modifier(is-green-2)
    background: var(--bal-color-green-2)
  +modifier(is-green-3)
    background: var(--bal-color-green)
  +modifier(is-red-1)
    background: var(--bal-color-red-1)
  +modifier(is-red-2)
    background: var(--bal-color-red-2)
  +modifier(is-red-3)
    background: var(--bal-color-red)
  +modifier(is-yellow-1)
    background: var(--bal-color-yellow-1)
  +modifier(is-yellow-2)
    background: var(--bal-color-yellow-2)
  +modifier(is-yellow-3)
    background: var(--bal-color-yellow)
  //
  // Modifier
  +modifier(has-fullheight)
    &,
    .bal-card-content,
    .bal-card-content > .is-flex
      height: 100%
  +modifier(has-border)
    border: var(--bal-border-width-normal) dashed var(--bal-color-grey)
  +modifier(is-flat)
    box-shadow: var(--bal-shadow-none)
  +modifier(is-square)
    border-radius: var(--bal-radius-none)
  +modifier(is-selected)
    background: var(--bal-color-primary-2)
  +modifier(is-clickable)
    cursor: pointer
    transition: transform 0.15s ease-in-out
    &:active,
    &:hover
      box-shadow: var(--bal-shadow-large)
      transform: translate3d(0, -2px, 0)
  //
  // Spacing
  +card-spacing
  +tablet
    +card-spacing(1.5rem)
  +modifier(is-small)
    +tablet
      +card-spacing
  +modifier(is-medium)
    +tablet
      +card-spacing(1.5rem)
    +desktop
      +card-spacing(2rem)
  +modifier(is-large)
    +tablet
      +card-spacing(2rem)
    +desktop
      +card-spacing(4rem)
  //
  // tag placment
  & > .bal-tag
    position: absolute
    left: 1rem
    top: -1rem

    +desktop
      left: 1.5rem
    +modifier(is-left)
      left: 1rem
      +desktop
        left: 1.5rem
    +modifier(is-center)
      left: 50%
      transform: translateX(-50%)
      +desktop
        left: 50%
        transform: translateX(-50%)

+block(card-title)
  display: block
  position: static
  .title,
  .bal-heading__text
    .bal-tag-group,
    .bal-button-group
      margin-top: .5rem
  +tablet
    .bal-heading h3
      display: flex
      align-items: center
    .title,
    .bal-heading__text
      display: flex
      .bal-tag-group,
      .bal-button-group
        margin-top: 0
        margin-left: .5rem
        display: inline-flex
      .bal-tag-group
        .bal-tag
          margin-top: .125rem
      .bal-button-group
        flex: 1

+block(card-subtitle)
  display: block
  position: static

+block(card-content)
  display: block
  position: static
  word-break: break-word
  text-align: left
  font-family: var(--bal-font-family-text)
  font-size: var(--bal-size-normal)
  line-height: var(--bal-line-height-normal)
  hyphens: auto

+block(card-actions)
  display: block
  position: static

+block(card-button)
  display: block
  position: static

// @deprecated
// use the prop fullheight instead
.column bal-card.has-height-auto,
.column bal-card.has-height-auto bal-card-content,
.column bal-card.has-height-auto bal-card-content > .is-flex
  height: 100%

